...
                    .padding(.bottom, 12)

                    Spacer()
                }
                .padding(.top)
            }
            .navigationTitle("Rotate")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button("Done") {
                        dismiss()
                    }
                    .font(.headline)
                }
            }
        }
...
