...

enum EditorTool: String, CaseIterable {
    case filters, rotate, crop, collage

    var icon: String {
        switch self {
        case .filters: return "Filters"
        case .rotate: return "Rotate"
        case .crop: return "Crop"
        case .collage: return "Collage"
        }
    }
}
...
